--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                             <p>The first time you click, the sorting direction is ascending (A to Z).</p>
                             <p>Click again, and the sorting direction will be descending (Z to A).</p>
 
+                            <p><strong>Click the building name to zoom to it on the map.</strong></p>
+                            
                             <table id="myTable">
                               <tr>
                                <!--When a header is clicked, run the sortTable function, with a parameter, 0 for sorting by names, 1 for sorting by country:-->  
@@ -121,6 +123,7 @@
         <script src='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
         <script src="lib/leaflet-src.js"></script>
         <script src="js/leaflet.zoomhome.min.js"></script>
+        <script src="js/print_dist/bundle.js"></script>
         <script src="js/geojson.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
 	</body>
