--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                                 <option value=1833>1833</option>
                                 <option value=1834>1834</option>
                                 <option value=1835>1835</option>
+                                  <option value=1836>1836</option>
+                                  <option value=1837>1837</option>
+                                  <option value=1838>1838</option>
                               </select>
                             </div>
                             <button type="submit" class="btn btn-default" id="year_submit_btn">
