--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                                   <option value=1836>1836</option>
                                   <option value=1837>1837</option>
                                   <option value=1838>1838</option>
+                                  <option value=1839>1839</option>
+                                  <option value=1840>1840</option>
+                                  <option value=1841>1841</option>
+                                  <option value=1842>1842</option>
+                                  <option value=1843>1843</option>
+                                  <option value=1844>1844</option>
+                                  <option value=1845>1845</option>
+                                  <option value=1846>1846</option>
                               </select>
                             </div>
                             <button type="submit" class="btn btn-default" id="year_submit_btn">
