Added upto 1860 and grid functionality

--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
                                   <option value=1844>1844</option>
                                   <option value=1845>1845</option>
                                   <option value=1846>1846</option>
+                                  <option value=1847>1847</option>
+                                  <option value=1848>1848</option>
+                                  <option value=1849>1849</option>
+                                  <option value=1850>1850</option>
+                                  <option value=1851>1851</option>
+                                  <option value=1852>1852</option>
+                                  <option value=1853>1853</option>
+                                  <option value=1854>1854</option>
+                                  <option value=1855>1855</option>
+                                  <option value=1856>1856</option>
+                                  <option value=1857>1857</option>
+                                  <option value=1858>1858</option>
+                                  <option value=1859>1859</option>
+                                  <option value=1860>1860</option>
+                                  
                               </select>
                             </div>
                             <button type="submit" class="btn btn-default" id="year_submit_btn">
