Added through 1883, changed golf course

--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
                                   <option value=1868>1868</option>
                                   <option value=1869>1869</option>
                                   <option value=1870>1870</option>
+                                  <option value=1871>1871</option>
+                                  <option value=1872>1872</option>
+                                  <option value=1873>1873</option>
+                                  <option value=1874>1874</option>
+                                  <option value=1875>1875</option>
+                                  <option value=1876>1876</option>
+                                  <option value=1877>1877</option>
+                                  <option value=1878>1878</option>
+                                  <option value=1879>1879</option>
+                                  <option value=1880>1880</option>
+                                  <option value=1881>1881</option>
+                                  <option value=1882>1882</option>
+                                  <option value=1883>1883</option>
                                   
                               </select>
                             </div>
